cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mod-bot-deployment
spec:
  selector:
    matchLabels:
      app: mod-bot
  replicas: 1
  template:
    metadata:
      labels:
        app: mod-bot
    spec:
      containers:
        - name: mod-bot
          image: $(IMAGE)
