cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mod-bot-service
  labels:
    app: mod-bot
spec:
  type: ClusterIP
  ports:
    - port: 80 # External port
      targetPort: 3000 # Port the pod exposes
  selector:
    app: mod-bot
