cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mod-bot-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
    nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: euno.reactiflux.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mod-bot-service
                port:
                  number: 80
  tls:
    - hosts:
        - euno.reactiflux.com
      secretName: letsencrypt-prod-key
